<resources>
    <string name="app_name">Dog Finder</string>
    <string name="username">Username</string>
    <string name="browse">Browse</string>
    <string name="email">Email</string>
    <string name="editTitle">Edit your post</string>
    <string name="edit">Edit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="registerHint">New User?Sign up.</string>
    <string name="Verify">Verify</string>
    <string name="verifyHint">Wrong email? Please register again.</string>
    <string name="indexTitle">Help our best friend</string>
    <string name="strayPostTitle">Post Stray Dog</string>
    <string name="lostPostTitle">Post Lost Dog</string>
    <string name="straySquareTitle">Find Stray Dogs</string>
    <string name="lostSquareTitle">Find Lost Dogs</string>
    <string name="adoptSquareTitle">Adopt Dogs</string>
    <string name="openNavigation">Open the navigation menu</string>
    <string name="closeNavigation">Close the navigation menu</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="publish">Publish</string>
    <string name="Location">Location</string>
    <string name="description">Please write down some additional descriptions.</string>
    <string name="breed">Breed</string>
    <string name="condition">Body Condition</string>
    <string name="colorHint">Select color</string>
    <string name="mapAPI">AIzaSyDlZ1agP5Wv0h7iVVKFhajTJRMkn1G-gT4</string>
    <string name="searchHint">Search the location...</string>
    <string name="confirm">Confirm</string>
    <string name="lostFormHint">Find your lost pet</string>
    <string name="account">Account</string>
    <string name="accountHint">Account info</string>
    <string name="strayHint">Stray dog post</string>
    <string name="lostHint">Lost dog post</string>
    <string name="likeHint">Favorites</string>
    <string name="searchDog">Search by breed,behavior,color,size,condition.</string>
    <string name="commentHint">Comment</string>
    <string name="commentListTitle">My COMMENTS</string>
    <string name="send">Sent</string>
    <string name="receive">Received</string>
    <string name="logout">Logout</string>
    <string name="Homepage">Homepage</string>
    <string name="straydog">Stray dog</string>
    <string name="lostdog">Lost dog</string>
    <string name="accountTile">Edit your information below.</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="dialogHint">Get specific</string>
    <string name="emailHint">Need verification.</string>
    <string name="resetPassword">Forgot Password?</string>
    <string name="resetBack">Back to login.</string>
    <string name="reset">reset</string>
    <string name="search">search...</string>
    <string name="view_link">View Profile</string>
    <string name="resetHint">Input password to receive reset email.</string>
    <string name="profileLink">View detail</string>
    <string name="addComment">Add a comment...</string>
    <string name="post">Post</string>
    <string name="commentTitle">View all comments</string>
    <string name="Characteristics">Characteristics</string>
    <string name="description_title">Description</string>
    <string name="postList">Posting record</string>
    <string name="postTitle">MY POSTS</string>
    <string name="collectionTitle">Favorites</string>
    <string name="Stray">Stray Dog</string>
    <string name="Lost">Lost Pet</string>
    <string name="straySlding">Find Stray Dog</string>
    <string name="lostSlding">Find Lost Dog</string>
    <string name="fiterBtn">DONE</string>
    <string name="clear">CLEAR</string>
    <string name="view_reply">View reply</string>
    <string-array name="breeds">
        <item>Affenpinscher</item>
        <item>Afghan hound</item>
        <item>African hunting dog</item>
        <item>Airedale</item>
        <item>American staffordshire terrier</item>
        <item>Appenzeller</item>
        <item>Australian terrier</item>
        <item>Alaskan Malamute</item>
        <item>Basenji</item>
        <item>Basset</item>
        <item>Beagle</item>
        <item>Bedlington terrier</item>
        <item>Bernese mountain dog</item>
        <item>Blenheim spaniel</item>
        <item>Bloodhound</item>
        <item>Bluetick</item>
        <item>Border collie</item>
        <item>Border terrier</item>
        <item>Borzoi</item>
        <item>Boston bull</item>
        <item>Bedlington terrier</item>
        <item>Black and tan coonhound</item>
        <item>Bouvier des flandres</item>
        <item>Boxer</item>
        <item>Briard</item>
        <item>Brabancon griffon</item>
        <item>Brittany spaniel</item>
        <item>Bull mastiff</item>
        <item>Griffon Bruxellois</item>
        <item>Cairn</item>
        <item>Cardigan</item>
        <item>Chesapeake bay retriever</item>
        <item>Chihuahua</item>
        <item>Chow</item>
        <item>Clumber spaniel</item>
        <item>Cocker spaniel</item>
        <item>Collie</item>
        <item>Curly coated retriever</item>
        <item>Dandie dinmont</item>
        <item>Dachshund</item>
        <item>Dingo</item>
        <item>Dhole</item>
        <item>Doberman</item>
        <item>English foxhound</item>
        <item>English setter</item>
        <item>English springer spaniel</item>
        <item>English toy terrier (Black &amp; Tan)</item>
        <item>Entlebucher</item>
        <item>Eskimo dog</item>
        <item>French bulldog</item>
        <item>Fox terrier</item>
        <item>Flat-coated retriever</item>
        <item>German shepherd</item>
        <item>Giant schnauzer</item>
        <item>Golden retriever</item>
        <item>Gordon setter</item>
        <item>Greater swiss mountain Dog</item>
        <item>Great dane</item>
        <item>Great pyrenees</item>
        <item>Groenendael</item>
        <item>German short-haired pointer</item>
        <item>Irish setter</item>
        <item>Irish terrier</item>
        <item>Irish water spaniel</item>
        <item>Irish wolfhound</item>
        <item>Italian greyhound</item>
        <item>Ibizan hound</item>
        <item>Japanese spaniel</item>
        <item>Keeshond</item>
        <item>Kelpie</item>
        <item>Kerry blue terrier</item>
        <item>Komondor</item>
        <item>Kuvasz</item>
        <item>Labrador retriever</item>
        <item>Lakeland terrier</item>
        <item>Leonberg</item>
        <item>Lhasa</item>
        <item>Malinois</item>
        <item>Maltese dog</item>
        <item>Mexican hairless</item>
        <item>Malamute</item>
        <item>Miniature pinscher</item>
        <item>Miniature poodle</item>
        <item>Miniature schnauzer</item>
        <item>Newfoundland</item>
        <item>Norfolk terrier</item>
        <item>Norwegian elkhound</item>
        <item>Norwich terrier</item>
        <item>Old english sheepdog</item>
        <item>Otterhound</item>
        <item>Papillon</item>
        <item>Pekingese</item>
        <item>Pembroke</item>
        <item>Pomeranian</item>
        <item>Pug</item>
        <item>Redbone</item>
        <item>Rhodesian ridgeback</item>
        <item>Rottweiler</item>
        <item>Saint bernard</item>
        <item>Saluki</item>
        <item>Samoyed</item>
        <item>Schipperke</item>
        <item>Scotch terrier</item>
        <item>Scottish deerhound</item>
        <item>Sealyham terrier</item>
        <item>Soft-coated wheaten terrier</item>
        <item>Shetland sheepdog</item>
        <item>Siberian husky</item>
        <item>Silky terrier</item>
        <item>Shih-Tzu</item>
        <item>Staffordshire bull terrier</item>
        <item>Standard poodle</item>
        <item>Standard schnauzer</item>
        <item>Sussex spaniel</item>
        <item>Tibetan mastiff</item>
        <item>Tibetan terrier</item>
        <item>Toy terrier</item>
        <item>Toy poodle</item>
        <item>Treeing walker coonhound</item>
        <item>Vizsla</item>
        <item>Weimaraner</item>
        <item>Walker hound</item>
        <item>Welsh springer spaniel</item>
        <item>West highland white terrier</item>
        <item>Whippet</item>
        <item>Wire-haired fox terrier</item>
        <item>Yorkshire terrier</item>
    </string-array>
    <string name="exit_menu">Exit</string>
    <string name="error_tf_init">Out of Memory Error. Try closing a few background applications.</string>
    <string name="share_with">Share with..</string>
    <string name="list_breeds">Supported Breeds</string>
    <string name="searchFor">Look up on Wikipedia?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_detection">No detection</string>
    <string name="change_language">Change Language</string>
    <string name="activity_name_classification">Identify Dog Breeds</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="from_gallery">From Gallery..</string>
</resources>