<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="Home"
            android:icon="@mipmap/index">
        </item>
        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@mipmap/profile">
        </item>
        <item android:id="@+id/nav_stray"
            android:title="@string/straySlding"
            android:icon="@mipmap/gallery_black">
        </item>
        <item android:id="@+id/nav_lost"
            android:title="@string/lostSlding"
            android:icon="@mipmap/lost_dog_black">
        </item>
        <item android:id="@+id/nav_like"
            android:title="@string/likeHint"
            android:icon="@mipmap/like_list">
        </item>
        <item android:id="@+id/nav_post"
            android:title="@string/postList"
            android:icon="@mipmap/post">
        </item>
        <item android:id="@+id/nav_comment"
            android:title="@string/commentHint"
            android:icon="@mipmap/comment_black">
        </item>
        <item android:id="@+id/logout"
            android:title="Logout"
            android:icon="@mipmap/logout">
        </item>
    </group>
</menu>