<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ResetPasswordActivity"
    android:orientation="vertical"
    android:background="@mipmap/dog7">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/dimen_60sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="cursive"
        >
    </TextView>
    <LinearLayout
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_180dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="@dimen/dimen_250dp"
            android:layout_height="@dimen/dimen_50dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_15dp">
            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@mipmap/email1">
            </ImageView>
            <EditText
                android:hint="@string/email"
                android:id="@+id/user_email"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_50dp"
                android:textSize="@dimen/dimen_20sp"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:textColor="@color/chocolate"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:gravity="center">
            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/reset"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:layout_gravity="center"
            android:text="@string/reset"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/register_btn">
        </Button>
        <TextView
            android:id="@+id/back_link"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetBack"
            android:textColor="@color/mediumvioletred"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textSize="@dimen/dimen_20sp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">
        </TextView>
    </LinearLayout>
</LinearLayout>