<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/dog1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/dimen_60sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_marginTop="@dimen/dimen_50dp">
    </TextView>
    <LinearLayout
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_180dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_width="200dp"
            android:layout_height="@dimen/dimen_50dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@mipmap/email">
            </ImageView>
            <EditText
                android:textColor="@color/dimgray"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_50dp"
                android:hint="@string/email"
                android:textSize="@dimen/dimen_20sp"
                android:textColorHint="@color/dimgray"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:textStyle="bold"
                android:fontFamily="cursive">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_50dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_15dp">
            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@mipmap/password">
            </ImageView>
            <EditText
                android:textColor="@color/dimgray"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_50dp"
                android:hint="@string/password"
                android:textSize="@dimen/dimen_20sp"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:textColorHint="@color/dimgray"
                android:textStyle="bold"
                android:fontFamily="cursive">
            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:background="@drawable/login_btn">
        </Button>
        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerHint"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textSize="@dimen/dimen_20sp"
            android:textColor="@color/darkslateblue"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_marginBottom="@dimen/dimen_30dp">
        </TextView>
    </LinearLayout>
</LinearLayout>