<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:orientation="vertical"
    android:background="@mipmap/dog3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/_50ssp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="cursive"
        >
    </TextView>
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@mipmap/user">
            </ImageView>
            <EditText
                android:textColor="@color/dimgray"
                android:id="@+id/username"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/username"
                android:textSize="@dimen/_15ssp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColorHint="@color/dimgray"
                android:textStyle="bold"
                android:fontFamily="cursive">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@mipmap/email">
            </ImageView>
            <EditText
                android:textColor="@color/dimgray"
                android:id="@+id/email"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/email"
                android:textSize="@dimen/_15ssp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColorHint="@color/dimgray"
                android:textStyle="bold"
                android:fontFamily="cursive">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@mipmap/password">
            </ImageView>
            <EditText
                android:textColor="@color/dimgray"
                android:id="@+id/password"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/password"
                android:textSize="@dimen/_15ssp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColorHint="@color/dimgray"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:inputType="textPassword">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@mipmap/confirm_password">
            </ImageView>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/confirm_password"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/_15ssp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColorHint="@color/dimgray"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:textColor="@color/dimgray">
            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_gravity="center"
            android:text="@string/Register"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/register_btn">
        </Button>
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@mipmap/back"
        android:layout_marginTop="@dimen/_150sdp"
        android:clickable="true"
        android:id="@+id/back">
    </ImageView>
</LinearLayout>